[gd_scene load_steps=4 format=3 uid="uid://pwg28rbinbjg"]

[ext_resource type="Script" path="res://addons/object_creator/path_choice.gd" id="1_6a5k6"]
[ext_resource type="LabelSettings" uid="uid://c7ay5h8tbaidb" path="res://addons/object_creator/Assets/input_warning.tres" id="1_bb1da"]

[sub_resource type="LabelSettings" id="LabelSettings_opjdf"]
font_size = 25

[node name="PathChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6a5k6")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.85

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MainLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Choose your export Path"
label_settings = SubResource("LabelSettings_opjdf")
horizontal_alignment = 1

[node name="KnownPathLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Prior used export Paths"
horizontal_alignment = 1

[node name="KnownPathSelection" type="OptionButton" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AddPathLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Add new export Path"
horizontal_alignment = 1

[node name="AddPathInput" type="LineEdit" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ExportArea" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.85
anchor_right = 0.6
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="ExportArea"]
visible = false
layout_mode = 2
label_settings = ExtResource("1_bb1da")

[node name="Button" type="Button" parent="ExportArea"]
layout_mode = 2
text = "Export Object"
